--- a/.github/workflows/lcu-github-artifacts-release.yml
+++ b/.github/workflows/lcu-github-artifacts-release.yml
@@ -1,4 +1,4 @@
-name: kacloomis/public-web-react
+name: kacloomis/public-web-docusaurus
 
 on:
   push:
@@ -13,9 +13,9 @@ env:
   Branches: main
   MainBranch: main
   NPMRegistry: https://registry.npmjs.org/
-  InstallCommand: npm ci
+  InstallCommand: npm i
   BuildCommand: npm run build
-  Output: ./build
+  Output: ./
 
 jobs:
   build:
